--- a/Northwind.UI.Web/Views/_ViewImports.cshtml
+++ b/Northwind.UI.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using Northwind.UI.Web
 @using Northwind.UI.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PagedList.Core.Mvc
