fix identity server

--- a/Northwind.UI.Web/Views/Home/CreateCustomer.cshtml
+++ b/Northwind.UI.Web/Views/Home/CreateCustomer.cshtml
@@ -24,9 +24,16 @@
                 </div>
 
                 <div class="form-group row">
-                    <label for="ContactName" class="col-md-2 col-form-label">Company Name:</label>
+                    <label for="ContactName" class="col-md-2 col-form-label">Contact Name:</label>
                     <div class="col-md-10">
                         <input class="form-control" type="text" id="ContactName" name="ContactName">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="ContactTitle" class="col-md-2 col-form-label">Contact Title:</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" id="ContactTitle" name="ContactTitle">
                     </div>
                 </div>
 
