--- a/Northwind.UI.Web/Views/Home/Edit.cshtml
+++ b/Northwind.UI.Web/Views/Home/Edit.cshtml
@@ -31,6 +31,13 @@
                 </div>
 
                 <div class="form-group row">
+                    <label for="ContactTitle" class="col-md-2 col-form-label">Contact Title:</label>
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.ContactTitle, new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
                     <label for="Address" class="col-md-2 col-form-label">Address:</label>
                     <div class="col-md-10">
                         @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
