--- a/Northwind.UI.Web/Views/Shared/_Layout.cshtml
+++ b/Northwind.UI.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,17 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="CustomerList">Customer List</a></li>
+
+                    @if (User.IsInRole("PayingUser"))
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="OrderFrame">Order a framed image</a></li>
+                    }
+                    
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Logout">Logout</a></li>
+                    }
+                    
                 </ul>
             </div>
         </div>
