--- a/Northwind.IDP/Views/_ViewImports.cshtml
+++ b/Northwind.IDP/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
-﻿@using IdentityServer4.Quickstart.UI
+﻿@using Northwind.IDP.Controllers.Account;
+@using Northwind.IDP.Controllers.Consent;
+@using Northwind.IDP.Controllers.Grants;
+@using Northwind.IDP.Controllers.Home;
+@using Northwind.IDP.Controllers.UserRegistation;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
