--- a/Northwind.UI.Web/Views/Shared/_Layout.cshtml
+++ b/Northwind.UI.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -35,7 +38,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="CustomerList">Customer List</a></li>
 
-                    @if (User.IsInRole("PayingUser"))
+                    @if ((await AuthorizationService.AuthorizeAsync(User,"CanOrderFrame")).Succeeded)
                     {
                         <li><a asp-area="" asp-controller="Home" asp-action="OrderFrame">Order a framed image</a></li>
                     }
