--- a/Northwind.UI.Web/Views/Home/OrderFrame.cshtml
+++ b/Northwind.UI.Web/Views/Home/OrderFrame.cshtml
@@ -6,4 +6,15 @@
     <div class="text-center bottomMarginSmall">We've got this address on record for you:</div>
     <div class="text-center text-info">@Model.Address</div>
     <div class="text-center">If this isn't correct, please contact us.</div>
+    <table class="table table-bordered">
+        <tr>
+            <th>Claims</th>
+        </tr>
+        @foreach (var item in Model.Claims)
+        {
+            <tr>
+                <td>@item</td>
+            </tr>
+        }
+    </table>
 </div>
