--- a/Northwind.IDP/Views/Shared/_Layout.cshtml
+++ b/Northwind.IDP/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
 
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="~/lib/Vue/Vuejs.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
