--- a/Northwind.IDP/Views/UserRegistration/_AddClaimUser.cshtml
+++ b/Northwind.IDP/Views/UserRegistration/_AddClaimUser.cshtml
@@ -3,31 +3,35 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-
-<table class="table">
+<div class="model-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+    <h4 class="modal-title" id="modalLabel">FriendsInfo</h4>
+</div>
+<table class="table" >
     <tr>
         <td>Client Id:</td>
-        <td>@Html.TextBox("")</td>
-    </tr>
+        <td><input type="text" id="client_id" class="form-control" /></td>
     <tr>
         <td>Client Name:</td>
-        <td>@Html.TextBox("")</td>
+        <td><input type="text" id="client_name" class="form-control" /></td>
     </tr>
     <tr>
         <td>Redirect Uris:</td>
-        <td>@Html.TextBox("")</td>
+        <td><input type="text" id="redirect" class="form-control" /></td>
     </tr>
     <tr>
         <td>Post Logout Redirect Uris:</td>
-        <td>@Html.TextBox("")</td>
+        <td><input type="text" id="logout_redirect" class="form-control" /></td>
     </tr>
     <tr>
         <td>Allowed Scopes:</td>
-        <td>@Html.TextBox("")</td>
+        <td>
+            <input type="text" id="allowScope" class="form-control" />
+        </td>
     </tr>
     <tr>
         <td>Client Secrets:</td>
-        <td>@Html.TextBox("")</td>
+        <td><input type="text" id="clientsecret" class="form-control" /></td>
     </tr>
 </table>
 
