--- a/Northwind.IDP/Views/UserRegistration/_Clients.cshtml
+++ b/Northwind.IDP/Views/UserRegistration/_Clients.cshtml
@@ -4,7 +4,7 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<input type="button" value="Add Client" class="btn btn-success" />
+<input type="button" value="Add Client" id="ClickNew" class="btn btn-success" />
 
 <h3>Clients</h3>
 
@@ -87,3 +87,4 @@
         </td>
     </tr>
 </table>
+
