--- a/Northwind.IDP/Views/Account/Login.cshtml
+++ b/Northwind.IDP/Views/Account/Login.cshtml
@@ -44,6 +44,10 @@
                                        asp-controller="UserRegistration"
                                        asp-route-returnUrl="@Model.ReturnUrl">
                                         Haven't got an account yet? Click here.
+                                    </a> |
+                                    <a asp-action="ForgotPassword"
+                                       asp-controller ="UserRegistration">
+                                        Forgot Password
                                     </a>
                                 </div>
                                 <div class="form-group">
