--- a/Northwind.IDP/Views/_ViewImports.cshtml
+++ b/Northwind.IDP/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Northwind.IDP.Controllers.Home;
 @using Northwind.IDP.Controllers.UserRegistation;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "BotDetect.Web.Mvc.CaptchaTagHelper, BotDetect.Web.Mvc"
