--- a/Northwind_Web/Views/Shared/_Layout.cshtml
+++ b/Northwind_Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@model MvcSiteMapProvider.Web.Html.Models.SiteMapPathHelperModel
+@using System.Web.Mvc.Html
+@using MvcBreadCrumbs
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,43 +9,98 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+<div id="wrapper">
+        <!--Navigation-->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <!-- Top Menu Items -->
+                    <ul class="nav navbar-nav top-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Register", "Register", "Account")</li>                        
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> @User.Identity.Name <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="@Url.Action("Logout","Account")"><i class="fa fa-fw fa-power-off"></i> Logout</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                        }
+                    </ul>
+                </div>
+
+                <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens-->
+                <div class="collapse navbar-collapse navbar-collapse">
+                    <ul class="nav navbar-nav side-nav">
+                        <li>
+                            <a href="@Url.Action("Index","Home")"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="collapse" data-target="#Customer"><i class="fa fa-fw fa-arrows-v"></i> Customer <i class="fa fa-fw fa-caret-down"></i></a>
+                            <ul id="Customer" class="collapse">
+                                <li><a href="@Url.Action("Agregar","Home")">Agregar</a></li>
+                                <li><a href="#">Editar</a></li>
+                                <li><a href="#">Listar</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index","Home")"><i class="fa fa-fw fa-dashboard"></i> Productos</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Register", "Register", "Account")</li>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
-                    }
-                    else
-                    {
-                        <li>@Html.ActionLink("Login", "Login", "Account")</li>
-                    }
-                </ul>
-            </div>
+        </nav><!-- #Navigation -->
+
+    <div id="page-wrapper">
+        <div class="container-fluid body-content">
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">
+                        @ViewContext.RouteData.Values["controller"].ToString() <small>Statistics Overview</small>
+                    </h1>
+                    <div class="breadcrumb">
+                        @Html.MvcSiteMap().SiteMapPath()
+                    </div>
+                        @*@Html.Raw(BreadCrumb.Display())*@
+
+                        @*@Html.ActionLink(ViewContext.RouteData.Values["action"].ToString()
+                        ,ViewContext.RouteData.Values["action"].ToString()
+                        ,ViewContext.RouteData.Values["controller"].ToString()) |*@
+                </div>
+            </div><!-- /.row -->
+
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    </div>        
+</div><!-- #wrapper-->
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
